--- a/demo/package.json
+++ b/demo/package.json
@@ -7,13 +7,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^5.1.3",
+    "intl-messageformat-parser": "^6.4.4",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-intl": "^4.5.2",
+    "react-intl": "^5.24.2",
     "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "3.4.1",
-    "react-switch": "^5.0.1"
+    "react-switch": "^5.0.1",
+    "sass": "^1.47.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^4.14.1"
   }
 }
