--- a/demo/package.json
+++ b/demo/package.json
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/lodash": "^4.14.178",
     "bootstrap": "^5.1.3",
     "intl-messageformat-parser": "^6.4.4",
+    "lodash": "^4.17.21",
     "react": "^16.13.1",
     "react-bootstrap": "^2.1.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-intl": "^5.24.2",
@@ -18,7 +22,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "3.4.1",
     "react-switch": "^5.0.1",
-    "sass": "^1.47.0"
+    "recharts": "^2.1.8",
+    "sass": "^1.47.0",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
